# stp-template

./: README.md  pyproject.toml
docs/: README.md
lib/: README.md
notebooks/: README.md
src/: README.md
tests/: README.md
